--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,20 @@
   <artifactId>sessioncookie</artifactId>
   <version>1.0.0-beta</version>
 
+  <name>SessionCookie</name>
+  <description>SessionCookie is a Java library for storing Servlet based HttpSession objects as a cookie stored in the client browser.</description>
+  <url>https://github.com/baswerc/sessioncookie</url>
+  <scm>
+    <url>https://github.com/baswerc/sessioncookie.git</url>
+  </scm>
+  <developers>
+    <developer>
+      <id>baswerc</id>
+      <name>Corey Baswell</name>
+      <email>corey.baswell@gmail.com</email>
+    </developer>
+  </developers>
+
   <licenses>
     <license>
       <name>Apache License, Version 2.0</name>
@@ -30,6 +44,33 @@
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
         <version>1.6</version>
         <executions>
@@ -40,21 +81,12 @@
               <goal>sign</goal>
             </goals>
             <configuration>
-              <homedir>gpg.homedir</homedir>
+              <homedir>gpg.homed</homedir>
               <keyname>${gpg.keyname}</keyname>
               <passphraseServerId>${gpg.keyname}</passphraseServerId>
             </configuration>
           </execution>
         </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.4</version>
-        <configuration>
-          <failOnError>false</failOnError>
-        </configuration>
       </plugin>
 
       <plugin>
