--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,9 @@
             <goals>
               <goal>jar</goal>
             </goals>
+            <configuration>
+              <failOnError>false</failOnError>
+            </configuration>
           </execution>
         </executions>
       </plugin>
@@ -81,7 +84,7 @@
               <goal>sign</goal>
             </goals>
             <configuration>
-              <homedir>gpg.homed</homedir>
+              <homedir>${gpg.homed}</homedir>
               <keyname>${gpg.keyname}</keyname>
               <passphraseServerId>${gpg.keyname}</passphraseServerId>
             </configuration>
